TWISTED_TESTS = \
	caps_helper.py \
	servicetest.py \
	avatar-requirements.py \
	caps/advertise-contact-caps.py \
	caps/advertise-legacy.py \
	caps/caps-cache.py \
	caps/caps-persistent-cache.py \
	caps/compat-bundles.py \
	caps/double-disco.py \
	caps/disco-without-node.py \
	caps/from-bare-jid.py \
	caps/hashed-caps.py \
	caps/initial-caps.py \
	caps/jingle-caps.py \
	caps/offline.py \
	caps/receive-jingle.py \
	caps/trust-thyself.py \
	caps/tube-caps.py \
	client-types.py \
	cm/protocol.py \
	gateways.py \
	muc/avatars.py \
	muc/banned.py \
	muc/conference.py \
	muc/chat-states.py \
	muc/kicked.py \
	muc/name-conflict.py \
	muc/presence-before-closing.py \
	muc/renamed.py \
	muc/room.py \
	muc/roomlist.py \
	muc/scrollback.py \
	muc/send-error.py \
	muc/subject.py \
	muc/test-ensure.py \
	muc/test-muc-alias.py \
	muc/test-muc-invitation.py \
	muc/test-muc-ownership.py \
	muc/test-muc-properties.py \
	muc/test-muc.py \
	olpc/current-activity.py \
	olpc/olpc-muc-invitation.py \
	olpc/olpc-muc-prop-change.py \
	olpc/test-olpc-bundle.py \
	olpc/test-olpc-set-props-preload.py \
	olpc/change-notifications.py \
	pep-support.py \
	plugin-channel-managers.py \
	power-save.py \
	presence/decloak.py \
	presence/initial-contact-presence.py \
	presence/initial-presence.py \
	presence/invisible_xep_0126.py \
	presence/invisible_xep_0186.py \
	presence/presence.py \
	presence/plugins.py \
	presence/set-idempotence.py \
	presence/shared-status.py \
	roster/authorize.py \
	roster/edit-before-roster.py \
	roster/ensure.py \
	roster/groups.py \
	roster/groups-12791.py \
	roster/push-from-contact.py \
	roster/push-without-id.py \
	roster/removed-from-rp-subscribe.py \
	roster/request-group-before-roster.py \
	roster/request-group-after-roster.py \
	roster/test-google-roster.py \
	roster/test-roster.py \
	roster/test-roster-item-deletion.py \
	roster/test-roster-subscribe.py \
	roster/test-save-alias-to-roster.py \
	sasl/abort.py \
	sasl/close.py \
	sasl/jabber_auth.py \
	sasl/plain.py \
	sasl/complex.py \
	sasl/telepathy-password.py \
	search/ceci-nest-pas-un-serveur.py \
	search/extended.py \
	search/no-server-property.py \
	search/unextended.py \
	text/initiate.py \
	text/initiate-requestotron.py \
	text/destroy.py \
	text/ensure.py \
	text/respawn.py \
	text/send-error.py \
	text/send-to-correct-resource.py \
	text/test-chat-state.py \
	text/test-text-delayed.py \
	text/test-text-no-body.py \
	text/test-text.py \
	tls/server-tls-channel.py \
	version.py \
	$(NULL)

TWISTED_TUBE_TESTS = \
	tubes/accept-muc-dbus-tube.py \
	tubes/accept-muc-stream-tube.py \
	tubes/accept-private-dbus-tube.py \
	tubes/accept-private-stream-tube.py \
	tubes/check-create-tube-return.py \
	tubes/close-muc-with-closed-tube.py \
	tubes/crash-on-list-channels.py \
	tubes/create-invalid-tube-channels.py \
	tubes/ensure-si-tube.py \
	tubes/muc-presence.py \
	tubes/offer-muc-dbus-tube.py \
	tubes/offer-muc-stream-tube.py \
	tubes/offer-no-caps.py \
	tubes/offer-private-dbus-tube.py \
	tubes/offer-private-stream-tube.py \
	tubes/request-invalid-dbus-tube.py \
	tubes/test-get-available-tubes.py \
	tubes/test-socks5-muc.py \
	$(NULL)

TWISTED_VCARD_TESTS = \
	vcard/disconnect-during-pep.py \
	vcard/get-contact-info.py \
	vcard/item-not-found.py \
	vcard/overlapping-sets.py \
	vcard/redundant-set.py \
	vcard/refresh-contact-info.py \
	vcard/set-contact-info.py \
	vcard/set-set-disconnect.py \
	vcard/supported-fields.py \
	vcard/test-alias-empty-vcard.py \
	vcard/test-alias-pep.py \
	vcard/test-alias.py \
	vcard/test-avatar-async.py \
	vcard/test-avatar.py \
	vcard/test-avatar-retrieved.py \
	vcard/test-avatar-tokens.py \
	vcard/test-avatar-multiple-resources.py \
	vcard/test-save-alias-to-vcard.py \
	vcard/test-set-alias.py \
	vcard/test-vcard-cache.py \
	vcard/test-vcard-race.py \
	vcard/update-get-failed.py \
	vcard/update-rejected.py \
	$(NULL)

TWISTED_JINGLE_TESTS = \
	jingle/accept-extra-stream.py \
	jingle/call-basics.py \
	jingle/call-codecoffer.py \
	jingle/call-dtmf.py \
	jingle/call-muc.py \
	jingle/call-muc-cancel.py \
	jingle/call-muc-re-re-request.py \
	jingle/call-state.py \
	jingle/decloak-peer.py \
	jingle/dtmf.py \
	jingle/dtmf-no-audio.py \
	jingle/google-relay.py \
	jingle/hold-audio.py \
	jingle/hold-av.py \
	jingle/incoming-basics.py \
	jingle/incoming-call-stream-error.py \
	jingle/initial-audio-video.py \
	jingle/misuse.py \
	jingle/stun-server.py \
	jingle/transport-info-parsing.py \
	jingle/outgoing-basics.py \
	jingle/outgoing-ensure.py \
	jingle/outgoing-many-streams.py \
	jingle/payload-types.py \
	jingle/preload-caps-crash.py \
	jingle/session-id-collision.py \
	jingle/stream-errors-on-terminate.py \
	jingle/stream-errors-on-content-reject.py \
	jingle/stream-handler-error.py \
	jingle/test-content-adding-removal.py \
	jingle/test-description-info.py \
	jingle/test-incoming-call-reject.py \
	jingle/test-incoming-iceudp.py \
	jingle/test-outgoing-call-rejected.py \
	jingle/test-outgoing-iceudp.py \
	jingle/test-content-complex.py \
	jingle/test-wait-for-caps.py \
	jingle/test-wait-for-caps-incomplete.py \
	$(NULL)

TWISTED_FT_TESTS = \
	jingle-share/test-caps-file-transfer.py \
	jingle-share/test-send-file.py \
	jingle-share/test-send-file-send-before-accept.py \
	jingle-share/test-receive-file-and-close-socket-while-receiving.py \
	jingle-share/test-receive-file-and-disconnect.py \
	jingle-share/test-receive-file-and-sender-disconnect-while-pending.py \
	jingle-share/test-receive-file-and-sender-disconnect-while-transfering.py \
	jingle-share/test-receive-file-decline.py \
	jingle-share/test-send-file-and-cancel-immediately.py \
	jingle-share/test-send-file-wait-to-provide.py \
	jingle-share/test-multift.py \
	file-transfer/test-caps-file-transfer.py \
	file-transfer/test-ibb-too-early.py \
	file-transfer/test-receive-file-and-close-socket-while-receiving.py \
	file-transfer/test-receive-file-and-disconnect.py \
	file-transfer/test-receive-file-and-sender-disconnect-while-pending.py \
	file-transfer/test-receive-file-and-sender-disconnect-while-transfering.py \
	file-transfer/test-receive-file-decline.py \
	file-transfer/test-receive-file.py \
	file-transfer/test-send-file-and-cancel-immediately.py \
	file-transfer/test-send-file-declined.py \
	file-transfer/test-send-file-provide-immediately.py \
	file-transfer/test-send-file-to-unknown-contact.py \
	file-transfer/test-send-file-wait-to-provide.py \
	file-transfer/test-send-file-send-before-accept.py \
	file-transfer/test-uri.py \
	$(NULL)

TWISTED_TESTS += \
	test-debug.py \
	connect/disco-error-from-bare-jid.py \
	connect/disco-no-reply.py \
	connect/disconnect-timeout.py \
	connect/test-fail.py \
	connect/test-success.py \
	connect/test-twice.py \
	connect/test-nonblocking-tls.py \
	connect/stream-closed.py \
	connect/network-error.py \
	test-fallback-socks5-proxy.py \
	test-register.py \
	test-location.py \
	pubsub.py \
	sidecar-own-caps.py \
	sidecars.py \
	mail-notification.py \
	$(NULL)

TESTS =

TESTS_ENVIRONMENT = \
	PYTHONPATH=@abs_top_srcdir@/tests/twisted:@abs_top_builddir@/tests/twisted \
	GABBLE_TWISTED_SRCDIR=@srcdir@

check-local: check-coding-style check-twisted

# set to 6 when using refdbg, to give Gabble time to exit
CHECK_TWISTED_SLEEP=0

check-twisted:
if WANT_TWISTED_TESTS
	rm -f tools/core
	rm -f tools/vgcore.*
	rm -f tools/gabble-testing.log
	rm -f tools/strace.log
	if test -n "$$GABBLE_TEST_REFDBG"; then \
	  sleep=6; \
        else \
	  sleep=$(CHECK_TWISTED_SLEEP); \
	fi; \
	failed=0; \
	sh $(srcdir)/tools/with-session-bus.sh \
		--sleep=$$sleep \
		--config-file=tools/tmp-session-bus.conf \
		-- $(MAKE) check-TESTS \
		TESTS="$(TWISTED_TESTS)" \
		TESTS_ENVIRONMENT="$(TESTS_ENVIRONMENT) $(TEST_PYTHON) -u" || \
		failed=1; \
	if test -e tools/core; then\
		echo -e "\033[0;31;1mCore dump exists: tools/core\033[0m";\
		exit 1;\
	fi; \
	if test $$failed = 1; then\
		exit 1;\
	fi;
else
	@echo "Configured without Twisted test support. To enable them,"
	@echo "ensure that these Python modules are available:"
	@echo " • twisted.words.xish.domish"
	@echo " • twisted.words.protocols.jabber"
	@echo " • twisted.internet.reactor"
	@echo "and then re-run configure."
endif

if ENABLE_DEBUG
DEBUGGING_PYBOOL = True
else
DEBUGGING_PYBOOL = False
endif

if ENABLE_PLUGINS
PLUGINS_ENABLED_PYBOOL = True
else
PLUGINS_ENABLED_PYBOOL = False
endif

if ENABLE_CHANNEL_TYPE_CALL
CHANNEL_TYPE_CALL_ENABLED_PYBOOL = True
else
CHANNEL_TYPE_CALL_ENABLED_PYBOOL = False
endif

config.py: Makefile
	$(AM_V_GEN) { \
		echo "PACKAGE_STRING = \"$(PACKAGE_STRING)\""; \
		echo "CLIENT_TYPE = '$(CLIENT_TYPE)'"; \
		echo "DEBUGGING = $(DEBUGGING_PYBOOL)"; \
		echo "PLUGINS_ENABLED = $(PLUGINS_ENABLED_PYBOOL)"; \
		echo "CHANNEL_TYPE_CALL_ENABLED = $(CHANNEL_TYPE_CALL_ENABLED_PYBOOL)"; \
	} > $@

BUILT_SOURCES = config.py

EXTRA_DIST = \
	$(TWISTED_TESTS) \
	bytestream.py \
	connect/torture.py \
	constants.py \
	gabbletest.py \
	httptest.py \
	rostertest.py \
	jingle-share/file_transfer_helper.py \
	jingle-share/jingleshareutils.py \
	jingle/__init__.py \
	jingle/callutils.py \
	jingle/jingletest.py \
	jingle/jingletest2.py \
	mucutil.py \
	ns.py \
	olpc/util.py \
	tubes/muctubeutil.py \
	tubes/tubetestutil.py \
	sasl/saslutil.py \
	search/search_helper.py \
	file-transfer/file_transfer_helper.py \
	presence/invisible_helper.py \
	tls-cert.pem \
	tls-key.pem

TWISTED_TESTS += $(TWISTED_FT_TESTS) $(TWISTED_TUBE_TESTS)
TWISTED_TESTS += $(TWISTED_JINGLE_TESTS) $(TWISTED_VCARD_TESTS)

noinst_PROGRAMS = \
	telepathy-gabble-debug

telepathy_gabble_debug_SOURCES = \
    main-debug.c \
    test-resolver.c \
    test-resolver.h

telepathy_gabble_debug_LDADD = \
    $(top_builddir)/src/libgabble-convenience.la \
    $(ALL_LIBS)

telepathy_gabble_debug_LDFLAGS = -export-dynamic

AM_CFLAGS = $(ERROR_CFLAGS) @DBUS_CFLAGS@ @GLIB_CFLAGS@ @WOCKY_CFLAGS@ \
    @TP_GLIB_CFLAGS@ \
    -I $(top_srcdir)/src -I $(top_builddir)/src \
     -I $(top_srcdir)/lib -I $(top_builddir)/lib \
    -I $(top_srcdir) -I $(top_builddir)
ALL_LIBS = @DBUS_LIBS@ @GLIB_LIBS@ @WOCKY_LIBS@ @TP_GLIB_LIBS@

CLEANFILES = gabble-[1-9]*.log *.pyc */*.pyc config.py

check_misc_sources = $(TESTS)

# the following used to be in tools/
include $(top_srcdir)/tools/check-coding-style.mk

tools/exec-with-log.sh: tools/exec-with-log.sh.in
	@mkdir -p tools
	$(AM_V_GEN)sed -e "s|[@]abs_top_builddir[@]|@abs_top_builddir@|g" \
		-e "s|[@]abs_top_srcdir[@]|@abs_top_srcdir@|g" $< > $@
	@chmod +x $@

tools/%.conf: tools/%.conf.in
	@mkdir -p tools
	$(AM_V_GEN)sed -e "s|[@]abs_top_builddir[@]|@abs_top_builddir@|g" $< > $@

# We don't use the full filename for the .in because > 99 character filenames
# in tarballs are non-portable (and automake 1.8 doesn't let us build
# non-archaic tarballs)
tools/org.freedesktop.Telepathy.ConnectionManager.%.service: tools/%.service.in
	@mkdir -p tools
	$(AM_V_GEN)sed -e "s|[@]abs_top_builddir[@]|@abs_top_builddir@|g" $< > $@

# D-Bus service file for testing
service_in_files = tools/gabble.service.in
service_files = tools/org.freedesktop.Telepathy.ConnectionManager.gabble.service

# D-Bus config file for testing
conf_in_files = tools/tmp-session-bus.conf.in
conf_files = $(conf_in_files:.conf.in=.conf)

BUILT_SOURCES += $(service_files) $(conf_files) tools/exec-with-log.sh

EXTRA_DIST += \
	$(service_in_files) \
	$(conf_in_files) \
	tools/exec-with-log.sh.in \
	tools/with-session-bus.sh

CLEANFILES += \
    $(BUILT_SOURCES) \
    tools/gabble-testing.log
